2005-11-17  Richard Hult  <richard@imendio.com>

	* configure.in: Bump to 2.6.4.13.

	* gconf/gconf-dbus.c (gconf_engine_all_entries): Use the new
	function in utils to get the array of entries.

	* gconf/gconf-database-dbus.c (database_handle_get_all_entries):
	Use the new funcion in utils to append the array of entries.

	* gconf/gconf-dbus-utils.c
	(utils_append_entry_values_stringified): Handle invalid values
	here, fixes crash for example when schemas are invalid.
	- Refactor a bit, use an array of entries instead of just
	appending them, makes our signatures a lot smaller.

2005-11-01  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.12, which is a first version for testing with
	D-BUS 0.30+.
	
	* backends/Makefile.am:
	* backends/gconf-merge-tree.c: (merge_tree):
	* backends/markup-backend.c: (resolve_address):
	* backends/markup-tree.c: (markup_tree_get), (markup_dir_sync):
	* backends/markup-tree.h: Revert the reliable writes patch, since
	it's not used.

	* configure.in: Define HAVE_DBUS unconditionally.

	* gconf/gconfd.c: Disable debug mode.

2005-11-01  Richard Hult  <richard@imendio.com>

	* gconf/gconfd.c (main): From HEAD, add missing closelog().

	* autogen.sh: Bring up to date from upstream.

	* backends/Makefile.am: Link the test with the backend instead of
	compiling the source twice, removes warning from libtool.
	
	* gconf/Makefile.am: Only build the dbus version.

	* configure.in: Bump version, and bring the gtk-doc check up to
	date. Clean up remove the orbit checks, only use gtk if specified.

2005-09-30  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c (ensure_dbus_connection): Use _open_private
	to open a separate connection. We might be able to use a shared
	one now that threading is improved in dbus.

	* gconf/gconfd-dbus.c (server_real_handle_get_db): Simplify and
	fix warning.

2005-09-29  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c (handle_notify): Fix a leak of the key.
